@@ -103,32 +103,32 @@ public class ReactiveSecurityConfig {
         };
     }
 
-//    /**
-//     * cors 설정
-//     */
-//    @Bean
-//    CorsConfigurationSource corsConfiguration() {
-//        CorsConfiguration corsConfig = new CorsConfiguration();
-//        corsConfig.applyPermitDefaultValues();
+    /**
+     * cors 설정
+     */
+    @Bean
+    CorsConfigurationSource corsConfiguration() {
+        CorsConfiguration corsConfig = new CorsConfiguration();
+        corsConfig.applyPermitDefaultValues();
 //
-////        corsConfig.setAllowedOrigins(List.of("https://www.devit.shop"));
-////
-////        corsConfig.addAllowedMethod(HttpMethod.PUT);
-////        corsConfig.addAllowedMethod(HttpMethod.DELETE);
-////        corsConfig.addAllowedMethod(HttpMethod.GET);
-////        corsConfig.addAllowedMethod(HttpMethod.OPTIONS);
-////        corsConfig.addAllowedMethod(HttpMethod.POST);
-////        corsConfig.setAllowedOrigins(Arrays.asList(FRONTEND_LOCALHOST, FRONTEND_STAGING1, FRONTEND_STAGING2));
-//
+//        corsConfig.setAllowedOrigins(List.of("https://www.devit.shop"));
+
+        corsConfig.addAllowedMethod(HttpMethod.PUT);
+        corsConfig.addAllowedMethod(HttpMethod.DELETE);
+//        corsConfig.addAllowedMethod(HttpMethod.GET);
+//        corsConfig.addAllowedMethod(HttpMethod.OPTIONS);
+//        corsConfig.addAllowedMethod(HttpMethod.POST);
+        corsConfig.setAllowedOrigins(Arrays.asList(FRONTEND_LOCALHOST, FRONTEND_STAGING1, FRONTEND_STAGING2));
+
 //        corsConfig.setAllowedOriginPatterns(List.of("*"));
 //        corsConfig.setAllowedMethods(Arrays.asList("HEAD", "GET", "POST", "PUT", "DELETE", "OPTIONS"));
 //        corsConfig.setAllowedHeaders(List.of("*"));
 //        corsConfig.setAllowCredentials(true);
-//
-//        UrlBasedCorsConfigurationSource source =
-//                new UrlBasedCorsConfigurationSource();
-//        source.registerCorsConfiguration("/**", corsConfig);
-//        return source;
-//    }
+
+        UrlBasedCorsConfigurationSource source =
+                new UrlBasedCorsConfigurationSource();
+        source.registerCorsConfiguration("/**", corsConfig);
+        return source;
+    }
 
 }
